7.x-1.13.4
----------
 - #1906 Refactor datastore import to restore drush command (dsu).
 - #1898 Add validation to field data dictionary when strict POD validation is enabled.
 - #1920 Update Bureau codes for Open Data Federal Extras.
 - #1927 Fixed adding shapes to the spatial geographic coverage area field.
 - #1924 Fixed dkan_update_7012, if a site is still using a deprecated module, the data is not stripped from the db.
 - #1921 Drop the description label from the Harvest Source node view page.
 - #1912 Added 'ahoy dkan unittests' command.
 - #1917 Fixed 'ahoy dkan reinstall' command.
 - #1865 Removed old dkan_dataset_api module.
 - #1899 Override default error message on duplicate path aliases with more information.
 - NuCivic/visualization_entity#72 Switch to relative path for uploaded resources on visualization entity charts
 - #1836 Update language codes to use dashes rather than underscores for POD compliance.
 - #1836 Fix the POD and DCAT language output to use key values rather than label values.
 - #1891 Expose publishing options for content creators who do not belong to a group.
 - #1891 Disabled authoring information fields for content creators who do belong to a group.
 - #1901 Upgrade media module to 2.1
 - #1897 Fixed handling of dataset language setting to pass DCAT validation.
 - #1896 Fixed bug on open_data_schema_map: Multiple urls cause data.json describedBy field to be truncated.
 - #1890 Fixed the chosen widget exclusion settings to not apply to group search filters.
 - #1887 Removed unnecessary 'Select' button from the remote file input field on the resource form.
 - #1869 Add validation check on the API or Website URL field to require a full url.
 - #1883 Removed required status from the Rights field if the public access level is set to 'none'.
 - #1871 Better handling of remote resources with BOM.