@@ -16,7 +16,7 @@
       "distribution": [
         {
           "@type": "dcat:Distribution",
-          "downloadURL": "http://demo.getdkan.com/sites/default/files/GenChart_0_0.csv",
+          "downloadURL": "https://s3.amazonaws.com/dkan-default-content-files/phpunit/GenChart_0_0.csv",
           "mediaType": "text/csv",
           "format": "csv",
           "description": "<p>Population of state employees broken down into Gen X, Gen Y, Baby Boomers and Over 65+.</p> ",
@@ -24,7 +24,7 @@
         },
         {
           "@type": "dcat:Distribution",
-          "downloadURL": "http://demo.getdkan.com/sites/default/files/retirements_0.csv",
+          "downloadURL": "https://s3.amazonaws.com/dkan-default-content-files/phpunit/retirements_0.csv",
           "mediaType": "text/csv",
           "format": "csv",
           "description": "<p>Total number of employees who retired from the state workforce, 2011-2015.</p> ",
@@ -32,7 +32,7 @@
         },
         {
           "@type": "dcat:Distribution",
-          "downloadURL": "http://demo.getdkan.com/sites/default/files/2015EligibleVsActual.csv",
+          "downloadURL": "https://s3.amazonaws.com/dkan-default-content-files/phpunit/2015EligibleVsActual.csv",
           "mediaType": "text/csv",
           "format": "csv",
           "description": "<p>This data, ranging from fiscal year 2011 to fiscal year 2015, depicts the percentage of the workforce that is eligible to retire compared to the percentage of the workforce who actually retired.</p> ",
